Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   .devcontainer/devcontainer.json
	modified:   src/Components/Portfolio.jsx
	modified:   src/styles.css

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "GitHub.copilot",
+        "oderwat.indent-rainbow",
         "ms-vscode.azure-account",
         "ms-azuretools.vscode-azurestaticwebapps"
       ],
