--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "url": "https://github.com/microsoft/codespaces-teaching-template-js/issues"
   },
   "dependencies": {
+    "bootstrap": "5.3.1",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@parcel/resolver-default": "^2.9.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
